tests/neg/pattern.stk
type Student = #Student(name: String, sex: Bool, age: Int)

pattern Student(s: String, sex: Bool, age: Int): Student =
#Student s sex age   // error // error

fun main = println "patterns"
